<resources>
    <string name="app_name">MTG Deck Builder</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="decks">Decks</string>
    <string name="wishlist">Wishlist</string>
    <string name="deck">Deck</string>
    <string name="info">Info</string>
    <string name="cards">Cards</string>
    <string name="search_hint">Search cards...</string>
    <string name="add_to_deck">Add to deck</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="name">Name</string>
    <string name="format">Format</string>
    <string name="description">Description</string>
    <string name="filter">Filter</string>
    <string name="color">Color</string>
    <string name="type">Type</string>
    <string name="apply">Apply</string>
    <string name="colorless">Colorless</string>
    <string name="card_added">Card added to deck</string>
    <string name="create_deck">Create Deck</string>
    <string name="card">Card</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_deck">DeckActivity</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="title_activity_create_deck">CreateDeckActivity</string>
    <string-array name="color_items">
        <item></item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>White</item>
        <item>Black</item>
        <item>@string/colorless</item>
    </string-array>
    <string-array name="type_items">
        <item></item>
        <item>Land</item>
        <item>Creature</item>
        <item>Artifact</item>
        <item>Enchantment</item>
        <item>Planeswalker</item>
        <item>Instant</item>
        <item>Sorcery</item>
    </string-array>
</resources>
